# Copper-Engine

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  ChangeLog.txt  GenProjFiles.bat  Makefile  NumberOfLines.ps1  Run.sh  RunCopper-Editor  RunGDB.sh  compile_commands.json  imgui.ini  premake5.lua
Copper-Editor/: CMakeLists.txt  Makefile  imgui.ini
Copper-Editor/assets/: EditorData.cu
Copper-Editor/assets/Projects/EmptyTemplate/: Project.cu  Template.csproj  Template.csproj.cut
Copper-Editor/assets/Shaders/: fragmentDefault.glsl  gameRectFragment.glsl  lineFragment.glsl  lineVertex.glsl  vertexDefault.glsl
Copper-Editor/assets/Templates/: Project.cu.cut  Script.cs.cut  premake5.lua.cut
Copper-Editor/assets/Templates/DevProject/: Project.cu.cut  Template.csproj.cut
Copper-Editor/assets/TestProject/: Project.cu
Copper-Editor/assets/TestProject/Models/: Sniffer.gltf
Copper-Editor/assets/TestProject/Scenes/: Cube.copper  Default.copper  ParentAndChildrenTesting.copper
Copper-Editor/assets/Themes/: Default.cutheme  Old.cutheme
Copper-Editor/lib/FileWatch/FileWatch/: FileWatch.hpp
Copper-Editor/src/: EditorApp.cpp  imgui.ini
Copper-Editor/src/AssetFile/: AssetFileDatabase.cpp  AssetFileDatabase.h  CMakeLists.txt  Deserializer.cpp  Deserializer.h  MetaFile.cpp  MetaFile.h  Serializer.cpp  Serializer.h
Copper-Editor/src/AssetFiles/: AssetFileDatabase.cpp  CMakeLists.txt
Copper-Editor/src/Assets/: AssetMeta.cpp  AssetMeta.h  CMakeLists.txt  ProjectAssetDatabase.cpp  ProjectAssetDatabase.h  Serializer.cpp
Copper-Editor/src/Core/: AssetFileDatabase.cpp  CMakeLists.txt  EditorApp.cpp  EditorApp.h  FileWatcher.cpp  FileWatcher.h  MetaFileSerialization.cpp  MetaFileSerialization.h  Project.cpp  Project.h  ProjectFileWatcher.cpp  ProjectFileWatcher.h  SceneMeta.cpp  SceneMeta.h
Copper-Editor/src/Core/Utils/: ModelLoader.cpp  ModelLoader.h
Copper-Editor/src/Panels/: CMakeLists.txt  Console.cpp  Console.h  FileBrowser.cpp  FileBrowser.h  Panel.h  Profiler.cpp  Profiler.h  ProjectSettings.cpp  ProjectSettings.h  Properties.cpp  Properties.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneHierarchySaved.txt  ThemeEditor.cpp  ThemeEditor.h
Copper-Editor/src/Projects/: CMakeLists.txt  Project.cpp  Project.h  ProjectChecker.cpp  ProjectChecker.h  ProjectTemplate.cpp  ProjectTemplate.h
Copper-Editor/src/UI/: CMakeLists.txt  TypeWidgets.cpp  TypeWidgets.h
Copper-Editor/src/Viewport/: CMakeLists.txt  SceneCamera.cpp  SceneCamera.h
Copper-Engine/: CMakeLists.txt  Makefile
Copper-Engine/assets/Shaders/: fragmentDefault.glsl  vertexDefault.glsl
Copper-Engine/lib/CopperECS/: LICENSE  README.md
Copper-Engine/lib/GLAD/: CMakeLists.txt  Makefile  premake5.lua
Copper-Engine/lib/GLAD/src/: glad.c
Copper-Engine/lib/GLFW/: CMakeLists.txt  Makefile  premake5.lua
Copper-Engine/lib/ImGui/: CMakeLists.txt  Makefile  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  premake5.lua
Copper-Engine/lib/ImGui/ImGui/: imgui.cpp  premake5.lua
Copper-Engine/lib/ImGuizmo/ImGuizmo/: ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
Copper-Engine/lib/PhysX/lib/: PhysX_64.lib
Copper-Engine/lib/assimp/: CMakeLists.txt  Makefile  premake5.lua
Copper-Engine/lib/assimp/code/: ASEParser.cpp  ASEParser.h  BlenderLoader.cpp  C4DImporter.cpp  FBXConverter.cpp  FBXMeshGeometry.cpp  IFCBoolean.cpp  IFCCurve.cpp  IFCGeometry.cpp  IFCLoader.cpp  IFCMaterial.cpp  IFCOpenings.cpp  IFCProfile.cpp  IFCUtil.cpp  LogAux.h  SMDLoader.cpp  SMDLoader.h  X3DExporter.cpp  X3DExporter.hpp  XGLLoader.cpp  makefile.mingw
Copper-Engine/lib/pfd/: portable-file-dialogs.h
Copper-Engine/lib/stb/stb/: stb_image.cpp  stb_image.h
Copper-Engine/lib/yaml-cpp/: .gitignore  CMakeLists.txt  Makefile  premake5.lua
Copper-Engine/src/: Config.h.in  Copper.h  cupch.cpp  cupch.h
Copper-Engine/src/Copper/Core/: Engine.cpp  Engine.h  Entry.h
Copper-Engine/src/Engine/AssetStorage/: AssetList.h  AssetMap.h  AssetPtr.h  AssetStorage.cpp  AssetStorage.h  CMakeLists.txt
Copper-Engine/src/Engine/Components/: BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  Camera.cpp  Camera.h  CapsuleCollider.h  Collider.cpp  Collider.h  Component.h  Light.h  MeshRenderer.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsObject.h  RigidBody.cpp  RigidBody.h  ScriptComponent.cpp  ScriptComponent.h  SphereCollider.h  Tag.h  Transform.cpp  Transform.h
Copper-Engine/src/Engine/Core/: Args.cpp  Args.h  CMakeLists.txt  Core.h  Debug.h  Engine.cpp  Engine.h  Entry.h  Log.cpp  Log.h  SignalHandler.cpp  SignalHandler.h  UUID.cpp  UUID.h  Version.h  Window.h
Copper-Engine/src/Engine/Debug/: Assert.h  CMakeLists.txt  Log.cpp  Profiler.cpp  Profiler.h
Copper-Engine/src/Engine/Events/: CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h  RegistryEvent.h  WindowEvent.h
Copper-Engine/src/Engine/Filesystem/: CMakeLists.txt  Iterator.h  Path.cpp  Path.h  Path.inl
Copper-Engine/src/Engine/Input/: AxisManager.cpp  AxisManager.h  CMakeLists.txt  Error.h  Input.h  KeyCodes.h  Popup.cpp  Popup.h
Copper-Engine/src/Engine/Physics/: BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  Collider.cpp  CollisionData.h  CollisionNotifier.cpp  IntersectData.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsSimulationShader.cpp  Raycast.cpp  Raycast.h  RigidBody.cpp  ScenePhysics.cpp  SphereCollider.cpp  SphereCollider.h
Copper-Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Color.cpp  Color.h  ElementType.h  FrameBuffer.h  Material.cpp  Material.h  Mesh.h  Primitives.cpp  (+7 more)
Copper-Launcher/: CMakeLists.txt  Launcher-imgui.ini  Log.txt  Makefile  imgui.ini
Copper-Launcher/assets/: Launcher.cutheme  LauncherData.cu
Copper-Launcher/assets/Shaders/: gameRectVertex.glsl
Copper-Launcher/src/: Base.h  Dialogs.cpp  Dialogs.h  Entry.cpp  LauncherApp.cpp  LauncherApp.h  PersistentData.cpp  PersistentData.h  Project.h  ProjectEntry.cpp  ProjectEntry.h  ThemeEditor.cpp  ThemeEditor.h  UI.cpp  UI.h  Window.cpp  Window.h
Copper-Launcher/src/OS/: WindowsHelpers.cpp  WindowsHelpers.h
(+257 files in other folders)
